[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Targets/Target.gd" type="Script" id=1]
[ext_resource path="res://Enemies/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Assets/footstep_grass_004.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 18.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.338636 ), 0.0, 0.0, 0, 0 ]

[node name="Target" type="StaticBody2D" groups=[
"Damage",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Polygon2D6" type="Polygon2D" parent="."]
position = Vector2( 1, -1 )
color = Color( 0, 0, 0, 0.105882 )
polygon = PoolVector2Array( -7, 3, -8, 5, -7, 7, -5, 8, 3, 8, 5, 7, 6, 5, 5, 3, 3, 2, -5, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="HealthTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Node2D" parent="."]

[node name="Polygon2D4" type="Polygon2D" parent="Sprite"]
position = Vector2( 0, -16 )
scale = Vector2( 1.6, 1.6 )
color = Color( 0.403922, 0.309804, 0.266667, 1 )
polygon = PoolVector2Array( -1.875, 12.5, -0.625, 6.25, 0.625, 6.25, 1.875, 12.5 )

[node name="Polygon2D5" type="Polygon2D" parent="Sprite"]
position = Vector2( 0, -26 )
scale = Vector2( 1.6, 1.6 )
color = Color( 0.537255, 0.447059, 0.403922, 1 )
polygon = PoolVector2Array( -7.5, 8.125, 7.5, 7.5, 7.5, 8.125, -7.5, 8.75 )

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
scale = Vector2( 1.2, 1 )
color = Color( 0.803922, 0.678431, 0.447059, 1 )
polygon = PoolVector2Array( -4, -12, -4.16667, -6, -3.33333, -3, 0, -2, 3.33333, -3, 4.16667, -6, 4, -12, 3, -15, 0, -16, -3, -15 )

[node name="Polygon2D2" type="Polygon2D" parent="Sprite"]
position = Vector2( 0, -15 )
scale = Vector2( 1.5, 1.5 )
color = Color( 0.913725, 0.768627, 0.498039, 1 )
polygon = PoolVector2Array( -3, -3, -2, -1, 0, 0, 2, -1, 3, -3, 2, -5, 0, -6, -2, -5 )

[node name="Polygon2D3" type="Polygon2D" parent="Sprite"]
position = Vector2( 0, -13 )
scale = Vector2( 1.6, 1.6 )
color = Color( 0.501961, 0.364706, 0.301961, 1 )
polygon = PoolVector2Array( -3.75, -6.25, 4.375, -6.25, 5, -7, 1.875, -7.5, 1.25, -9.375, -1.25, -9.375, -1.875, -7.5, -5, -7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 0.6
max_distance = 200.0

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.6
one_shot = true
explosiveness = 1.0
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
initial_velocity = 70.0
initial_velocity_random = 0.4
angular_velocity = 100.0
angular_velocity_random = 1.0
scale_amount = 2.0
scale_amount_curve = SubResource( 2 )
color = Color( 0.768627, 0.686275, 0.462745, 1 )
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
